--- a/0_1.html
+++ b/0_1.html
@@ -3,9 +3,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Gopher</title>   
 </head>
-<body bgcolor="FF0060" text="#ffffff" link="#00FFFF" vlink="#00ff00" alink="#FF0000">
-<font size="3">
-設置地點：入口空橋<br />造型與構作：由「手工彩色玻璃」與「傳統客家山歌」呈現的視覺、影像與音樂構成客家印象之迎賓長廊空間。<br />創作人：劉得劭、江薦新、林維源<br />音樂創作：江薦新、王榆鈞。
-</font>
+<body bgcolor="#FFFFFF" text="#000000" link="#00FFFF" vlink="#00ff00" alink="#FF0000">
+<p><font size="3"><strong>設置地點：</strong>入口空橋<br />
+  <strong>造型與構作：</strong>由「手工彩色玻璃」與「傳統客家山歌」呈現的視覺、影像與音樂構成客家印象之迎賓長廊空間。<br />
+  <strong>創作人：</strong>劉得劭、江薦新、林維源<br />
+  <strong>音樂創作：</strong>江薦新、王榆鈞。</font>
+</p>
 </body>
 </html>
