--- a/0_2.html
+++ b/0_2.html
@@ -3,9 +3,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
             <title>Gopher</title>   
     </head>
-    <body bgcolor="FF0060" text="#ffffff" link="#00FFFF" vlink="#00ff00" alink="#FF0000">
+    <body bgcolor="#FFFFFF" text="#000000"  link="#00FFFF" vlink="#00ff00" alink="#FF0000">
         <font size="3">
-            設置地點：半月池<br />造型與構作：象徵四季花語之大型裝置雕塑作品<br />創作人：劉得劭、江薦新、林維源<br />創作理念：作品以建築之主要構成為基底出發，利用多種三角玻璃面創作出一整體律動之玻璃裝置雕塑，以四季為概念，抽象地且具趣味性的翻摺造型構成，每個角度皆呈現出不同的造型，在某一個特定視角結合水池之水面反射可以呈現出“花朵”意象，分別以顏色（春綠、夏紅、秋黃、冬白）及造型象徵春、夏、秋、冬四季與春耕、夏耘、秋收、冬藏的整體節氣意象。
-        </font>
+            <strong>設置地點：</strong>半月池<br />造型與構作：象徵四季花語之大型裝置雕塑<br />
+            <strong>創作人：</strong>劉得劭、江薦新、林維源<br />
+        <strong>創作理念：</strong>作品以建築之主要構成為基底出發，利用多種三角玻璃面創作出一整體律動之玻璃裝置雕塑，以四季為概念，抽象地且具趣味性的翻摺造型構成，每個角度皆呈現出不同的造型，在某一個特定視角結合水池之水面反射可以呈現出“花朵”意象，分別以顏色（春綠、夏紅、秋黃、冬白）及造型象徵春、夏、秋、冬四季與春耕、夏耘、秋收、冬藏的整體節氣意象。 </font>
     </body>
 </html>
