--- a/0_3.html
+++ b/0_3.html
@@ -2,12 +2,17 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
             <title>Gopher</title>   
-            </head>
+            <style type="text/css">
+            .red {
+	color: #F00;
+}
+            </style>
+    </head>
     <body bgcolor="#FFFFFF" text="#000000"  link="#00FFFF" vlink="#00ff00" alink="#FF0000">
-        <font size="3">
+    <font size="3">
             <strong>設置地點：</strong>戶外活動廣場階梯垂直立面(兩座行人樓梯之間)<br />
             <strong>造型與構作：</strong>大型馬賽克圖像創作<br />
-            <strong>創作人：</strong>黃耿茂、林士哲<br />
-        <strong>創作理念：</strong>為表達客家與時俱進不斷融合的精神，我們選用牡丹以及油桐作為創作的元素。以馬賽克方式拼組成大型的「牡丹花」和「油桐花」圖像，放置於前廣場的階梯立面上，花卉的爭艷以及震撼的視覺效果不僅可牽動觀眾的情緒，也傳遞了客家人隨遇而安和族群圓滿的生存精神。繽紛的花卉色彩增添了入口廣場的活潑與熱鬧氣氛，也賦予堅硬的水泥階梯較柔性的視覺感知。 </font>
+            <strong>創作人：</strong><em>黃耿茂</em>、<em>林士哲</em><br />
+    <strong>創作理念：</strong>為表達客家與時俱進不斷融合的精神，我們選用牡丹以及油桐作為創作的元素。以馬賽克方式拼組成大型的「<span class="red">牡丹花</span>」和「<span class="red">油桐花</span>」圖像，放置於前廣場的階梯立面上，花卉的爭艷以及震撼的視覺效果不僅可牽動觀眾的情緒，也傳遞了客家人隨遇而安和族群圓滿的生存精神。繽紛的花卉色彩增添了入口廣場的活潑與熱鬧氣氛，也賦予堅硬的水泥階梯較柔性的視覺感知。 </font>
     </body>
 </html>
