--- a/0_1.html
+++ b/0_1.html
@@ -10,7 +10,7 @@
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#00FFFF" vlink="#00ff00" alink="#FF0000">
 <p><font size="3"><strong>設置地點：</strong>入口空橋<br />
-  <strong>造型與構作：</strong>由「<span class="red">手工彩色玻璃</span>」與「<span class="red">傳統客家山歌</span>」呈現的視覺、影像與音樂構成客家印象之迎賓長廊空間<br />
+  <strong>造型與構作：</strong>由「<span class="red">手工彩色玻璃</span>」與「<span class="red">傳統客家山歌</span>」呈現的視覺、影像與音樂構成客家印象之迎賓長廊空間。<br />
   <strong>創作人：</strong><em>劉得劭</em>、<em>江薦新</em>、<em>林維源</em><br />
   <strong>音樂創作：</strong><em>江薦新</em>、<em>王榆鈞</em></font></p>
 </body>
